# SplatThis

./: .flake8  .gitignore  .pre-commit-config.yaml  ADR-Image-GS.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_SplatThis_vs_Image-GS.md  README.md  TESTING_SUMMARY.md  blur_vs_accurate_comparison.html  comparison.html  compression_demo.py  confirm_size_issue.py  create_e2e_website.py  create_enduser_visual_tests.py  create_final_visual_inspection.py  create_intermediate_steps_website.py  create_ultra_high_density_comparison.py  create_visual_inspection_site.py  debug_splat_sizes.py  debug_splats.py  demo_adaptive_gaussian.py  demo_adaptive_sizing.py  demo_advanced_error_metrics.py  demo_advanced_metrics_web.py  demo_anisotropic_refinement.py  demo_color_sampling.py  demo_error_analysis.py  demo_fixed_oriented_comparison.py  demo_gradient_utils.py  demo_manual_gradients.py  demo_oriented_comparison.py  demo_performance_optimization.py  demo_placement_algorithm.py  demo_progressive_allocation_e2e.py  demo_progressive_refinement.py  demo_real_splats_comparison.py  demo_real_splats_with_t1.py  demo_sgd_optimizer.py  demo_structure_tensor.py  (+53 more)
.agent-os/: README.md  decisions.md  implementation-status.md  roadmap.md
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/: combined-loss-function.md  content-adaptive-initialization.md  cuda-optimization.md  png-to-svg-pipeline.md  progressive-optimization-pipeline.md  quality-control-system.md
.agent-os/workflows/: spec-workflow.md
.github/workflows/: ci.yml  release.yml
docs/: ADAPTIVE_IMPLEMENTATION_PLAN.md  ADAPTIVE_SPLATS_SPEC.md  API.md  APPLE_GPU_RENDERER_SPEC.md  EXAMPLES.md  LAYERED_SALIENCY_PASSES_SPEC.md  MLX_IMPLEMENTATION_STATUS.md  MLX_RENDERER_OPTIMIZER_SPEC.md  SVG_PPTX_GAUSSIAN_TRICKS.md  TROUBLESHOOTING.md  adr-001-image-gs-insights.md  adr-002-png2splat-python-pipeline.md  index.html  png2splat_cpu_algorithm_adaptation.md  png2splat_repo_research.md
docs/demo/: canvas.html  canvas_500.html
e2e_progressive_results/: progressive_allocation_e2e_results.html
e2e_results/: e2e_testing_dashboard.html  enduser_visual_tests.html  final_visual_inspection.html  pipeline_evaluation_report.html  visual_inspection_complete.html
scripts/: benchmark_optimizer_backend.py  benchmark_renderer_backend.py
src/png2svg_gs/: __init__.py  advanced_features.py  cli.py  converter.py  enhanced_converter.py  features.py  io.py  losses.py  mlx_losses.py  mlx_optimizer.py  mlx_renderer.py  mlx_stage.py  optimizer.py  renderer.py  splat.py
src/splat_this/: __init__.py  cli.py  (+1 more)
tests/: __init__.py
tools/: fidelity_lab.py
(+95 files in other folders)
